--- a/docs/sql/sfmc-sql-string-functions.mdx
+++ b/docs/sql/sfmc-sql-string-functions.mdx
@@ -17,7 +17,7 @@ Here, I will cover only selected string functions that I find most useful for Ma
 
 :::note You Should Know
 
-All string functions in SQL use a 1-based index instead of 0-based indexing known from, for example, JavaScript. The first character starts at index 1. It is crucial for both providing the correct value to the parameters and correctly interpreting the results.
+All string functions in SQL use a 1-based index instead of 0-based indexing known from, for example, JavaScript. The first character starts at index 1. It is crucial to provide the correct value to the parameters and correctly interpret the results.
 
 :::
 
@@ -56,7 +56,7 @@ It is less useful for segmentation but awesome for various administrative purpos
 CHARINDEX("Manager", JobTitle, 1)
 ```
 
-In the example above, I used the optional starting index, but you will not be using it in most cases. The `CHARINDEX` defaults to starting from the beginning so that we can write the above line shorter as `CHARINDEX("Manager", JobTitle)`.
+I used the optional starting index in the example above, but you will not be using it in most cases. The `CHARINDEX` defaults to starting from the beginning so that we can write the above line shorter as `CHARINDEX("Manager", JobTitle)`.
 
 The function returns one of the three possible values:
 
@@ -87,6 +87,26 @@ The above query checks whether there is a space within the `InstitutionName` val
 
 :::
 
+## PATINDEX
+
+While [`CHARINDEX`](#charindex) is great for searching the position of a specific string in a value, `PATINDEX` gives you even more power by supporting the wildcard patterns used with [`LIKE`](./sfmc-sql-like.mdx) operator:
+
+Wildcards & Operators | Description
+-- | --
+`%` | Zero, one or more characters
+`_` | Exactly one character
+`[]` | Any single character from the list specified inside
+`-` | Range operator for `[]`
+`^` | Exclusion operator for `[]`
+
+To learn more about specific wildcards and advanced operators, check out the [`LIKE` guide](./sfmc-sql-like.mdx).
+
+```sql title="Broad C-Suite hunt with PATINDEX"
+PATINDEX(`%C_O%`, JobTitle)
+```
+
+While wildcards give `PATINDEX` an edge over [`CHARINDEX`](#charindex), it misses one feature of the latter - an optional argument for starting the search from a specific string. Either can be better depending on the use case at hand.
+
 ## CONCAT
 
 `CONCAT` function allows you to join two or more strings together.
@@ -114,7 +134,7 @@ SELECT
 ```
 
 It might seem cleaner, but there are two downsides to this method:
-1. With the plus notation, if at least one provided value is `NULL`, the whole outcome becomes `NULL`. `CONCAT` function treats such values as empty strings.
+1. With the plus notation, if at least one provided value is `NULL`, the outcome becomes `NULL`. `CONCAT` function treats such values as empty strings.
 2. If you want to join a string with a date type value, you need to use [`CONVERT`](./sfmc-sql-conversion-functions.mdx#cast--convert), but `CONCAT` will do the implicit conversion for you.
 
 :::
