Draft of Power of Code Resources article

--- a/docs/usecase/sfmc-code-resources.mdx
+++ b/docs/usecase/sfmc-code-resources.mdx
@@ -1,31 +1,24 @@
 ---
 id: sfmc-code-resources
-title: Conquer with SFMC Code Resources
-sidebar_label: Conquer with Code Resources
+title: Power of SFMC Code Resources
+sidebar_label: Power of Code Resources
 description: WIP
-image: img/og/og-image-conquer-with-sfmc-code-resources.png
-tags: [Marketing Cloud, SSJS, AMPScript, Snippet, Cloud Page, Pattern]
+image: img/og/og-image-power-of-sfmc-code-resources.png
+tags: [Marketing Cloud, SSJS, AMPScript, Snippet, Cloud Page, App]
 ---
 // TODO Image
+
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Divide and conquer your SFMC Cloud Page solutions" />
 
-## What is Code Resource?
+## What are the Code Resources?
 
-Before diving into Marketing Cloud world, let's start with the basics. Model-View-ViewModel (MVVM) is a software design pattern focused on simplicity and readability.
+Code Resources in Salesforce Marketing Cloud are a solution for hosting JavaScript, CSS, JSON, RSS, Text and XML files within your account.
 
-### MVC in Web Environment
+They were part of the legacy Classic Cloud Pages. However, their unique features and usefulness allowed them to survive sunsetting and thrive in the Web Studio. With Spring '22 Release they got a new home in Content Builder, and live along Content Blocks.
 
-### MVC in Marketing Cloud
+You may ask - why use Code Resources when we have new Cloud Pages in Web Studio and Code Content Blocks in Content Builder? As I highlighted above, a unique set of features makes Code Resources irreplaceable.
 
-## Why use MVC?
-
-## MVC Use Cases
-
-### MVC Cloud Page
-
-### MVC Mixed Source
-
-### MVC Cloud Page App
-
+|Feature | Cloud Page | Code Resource | Content Block |
+| -- | -- | -- | -- |
