--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -106,8 +106,9 @@ Knowing how to code is one thing. Knowing what to code is another. In Use Cases,
 
 - [Tailor with Data](./usecase/tailor-with-data.mdx)
 - [Engage with Countdown](./usecase/engage-with-countdown.mdx)
-- [Enhanced Send Log](./usecase/sfmc-enhanced-send-log.mdx)
+- [Power of Code Resources](./usecase/sfmc-code-resources.mdx)
 - [Solve with Cloud Page Apps](./usecase/sfmc-cloud-page-apps.mdx)
+- [Enhanced Send Log](./usecase/sfmc-enhanced-send-log.mdx)
 - [Contact Deletion Process](./usecase/sfmc-contact-deletion.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/usecase/sfmc-cloud-apps">Read about SFMC Config</a>
