--- a/docs/usecase/sfmc-contact-deletion.mdx
+++ b/docs/usecase/sfmc-contact-deletion.mdx
@@ -222,7 +222,7 @@ If you want to capture contacts-to-be-deleted from multiple Business Units, make
 External Key: `contact-deletion-pending-de`
 Sendable: `true`
 
-You don't need anything but the Subscriber Key for essential contact deletion. However, I prefer to add a bit more context that I can leverage in the [Contact Deletion arhcive](#contact-deletion-archive) described later in this article.
+You don't need anything but the Subscriber Key for essential contact deletion. However, I prefer to add a bit more context that I can leverage in the [Contact Deletion archive](#contact-deletion-archive) described later in this article.
 
 #### Contact Deletion Script Activity
 
